# latorendszer

./: CMakeLists.txt  ONLAB.kdev4  README.md  broadcaster.cpp  calibration.cpp  default.xml  display.cpp  gitignore  globals.cpp  images.xml  inputcommand.cpp  locator.cpp  main.cpp  out_camera_data.xml  project.h
DOC/: latorendszer.docx
socket_example/: client.cpp  server_udp.c
